--- a/shibex-frontend/package.json
+++ b/shibex-frontend/package.json
@@ -9,11 +9,13 @@
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.1.3",
     "bootstrap-icons": "^1.7.2",
+    "framer-motion": "^5.6.0",
     "popper.js": "^1.16.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
+    "react-scroll-parallax": "^2.4.3",
     "web-vitals": "^2.1.3"
   },
   "scripts": {
