--- a/shibex-soliders/package.json
+++ b/shibex-soliders/package.json
@@ -14,6 +14,7 @@
     "popper.js": "^1.16.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-intersection-observer": "^8.33.1",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
     "react-scroll-parallax": "^2.4.3",
